--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-  "printWidth": 80,
+  "printWidth": 100,
   "proseWrap": "always",
-  "singleQuote": false,
+  "semi": false,
+  "trailingComma": "all",
+  "singleQuote": true,
   "tabWidth": 2,
   "useTabs": false
 }
