--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,6 @@
   to = "/mine-hnt/data-only-guides/:splat"
   status = 301
   force = true
+[build.environment]
+  YARN_VERSION = "1.22.19"
+  NODE_VERSION = "16.15.1"
