--- a/netlify.toml
+++ b/netlify.toml
@@ -13,6 +13,16 @@
   to = "/mine-hnt/data-only-guides/:splat"
   status = 301
   force = true
+[[redirects]]
+  from = "5g-on-helium/5g-poc"
+  to = "5g-on-helium/mobile-poc"
+  status = 301
+  force = true
+[[redirects]]
+  from = "5g-on-helium/mining-5g"
+  to = "5g-on-helium/mining-mobile"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
