clean install and pinned .lock file versions

--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "serve": "docusaurus serve"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.2.0",
-    "@docusaurus/preset-classic": "^2.2.0",
-    "@mdx-js/react": "^1.5.8",
-    "clsx": "^1.1.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "yarn": "^1.22.10"
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
+    "@mdx-js/react": "1.5.8",
+    "clsx": "1.1.1",
+    "react": "16.8.4",
+    "react-dom": "16.8.4",
+    "yarn": "1.22.10"
   },
   "browserslist": {
     "production": [
@@ -30,5 +30,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "packageManager": "yarn@3.3.1"
 }
