--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@docusaurus/theme-mermaid": "2.2.0",
     "@mdx-js/react": "^1.5.8",
     "clsx": "^1.1.1",
+    "hast-util-is-element": "1.1.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "rehype-katex": "5",
+    "remark-math": "3",
     "yarn": "^1.22.10"
   },
   "browserslist": {
