--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -23,6 +23,8 @@ jobs:
         with:
           # Make sure the actual branch is checked out when running on pull requests
           ref: ${{ github.head_ref }}
+          # This is important to fetch the changes to the previous commit
+          fetch-depth: 0
 
       # pretter Action
       - name: Prettier Action
@@ -31,3 +33,5 @@ jobs:
         # uses: creyD/prettier_action@v4.2
         with:
           prettier_options: --write **/*.{md,mdx}
+          same_commit: True
+          only_changed: True
