MOBILE Modeled Coverage updates (#1064)
* redirect fixup

* relocated how to mine section and fix headers

* fixup frontmatter

* moving examples into tabs to reduce scrolling

* explorer stats options put into tabs

* explorer stats into tabs

* move rewards calculation section

* redirect fixup

* swap heartbeat tables for charts

* reward hex sizing and rationale

* speed test sample tables moved to tabs

* wider monitor support

* missed a few lines

* indoor/outdoor coverage points explainer

* removing legacy rewards explainer text

* updated reward algorithm section

* move mobile mappers to separate page

* adding KaTeX support to docs

* input from feedback

- remove leftover admonition text
- reorder speed test result examples
- add emoji to speed test result examples

* note on Modeled Coverage distance limit

--- a/netlify.toml
+++ b/netlify.toml
@@ -14,13 +14,13 @@
   status = 301
   force = true
 [[redirects]]
-  from = "5g-on-helium/5g-poc"
-  to = "5g-on-helium/mobile-poc"
+  from = "/5g-on-helium/5g-poc"
+  to = "/5g-on-helium/mobile-poc"
   status = 301
   force = true
 [[redirects]]
-  from = "5g-on-helium/mining-5g"
-  to = "5g-on-helium/mining-mobile"
+  from = "/5g-on-helium/mining-5g"
+  to = "/5g-on-helium/mobile-poc"
   status = 301
   force = true
 [build.environment]
