--- a/netlify.toml
+++ b/netlify.toml
@@ -23,6 +23,11 @@
   to = "/5g-on-helium/mobile-poc"
   status = 301
   force = true
+[[redirects]]
+  from = "/wallets/app-wallet"
+  to = "/mine-hnt/helium-hotspot-app"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
