--- a/netlify.toml
+++ b/netlify.toml
@@ -33,6 +33,21 @@
   to = "/hotspot-makers/maker-apps"
   status = 301
   force = true
+[[redirects]]
+  from = "/use-the-network/policies"
+  to = "/faq/terms"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/use-the-network/policies/terms"
+  to = "/faq/terms"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/use-the-network/policies/privacy"
+  to = "/faq/privacy"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
