--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "serve": "docusaurus serve"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.2.0",
-    "@docusaurus/preset-classic": "^2.2.0",
-    "@docusaurus/theme-mermaid": "2.2.0",
+    "@docusaurus/core": "2.3.1",
+    "@docusaurus/preset-classic": "2.3.1",
+    "@docusaurus/theme-mermaid": "2.3.1",
     "@mdx-js/react": "^1.5.8",
     "clsx": "^1.1.1",
     "hast-util-is-element": "1.1.0",
