--- a/netlify.toml
+++ b/netlify.toml
@@ -28,6 +28,11 @@
   to = "/mine-hnt/helium-hotspot-app"
   status = 301
   force = true
+[[redirects]]
+  from = "/solana/oracle-data"
+  to = "/oracles/oracle-data"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
