Hotspot maker docs rewrite

--- a/netlify.toml
+++ b/netlify.toml
@@ -33,6 +33,11 @@
   to = "/oracles/oracle-data"
   status = 301
   force = true
+[[redirects]]
+  from = "/solana//migration/hotspot-owner"
+  to = "/oracles//migration/hotspot-operator"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
