Hotspot maker migration updates

--- a/netlify.toml
+++ b/netlify.toml
@@ -38,6 +38,11 @@
   to = "/oracles//migration/hotspot-operator"
   status = 301
   force = true
+[[redirects]]
+  from = "/solana//migration/maker"
+  to = "/oracles//migration/hotspot-maker"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
