removed double slash from redirect paths

--- a/netlify.toml
+++ b/netlify.toml
@@ -34,13 +34,13 @@
   status = 301
   force = true
 [[redirects]]
-  from = "/solana//migration/hotspot-owner"
-  to = "/oracles//migration/hotspot-operator"
+  from = "/solana/migration/hotspot-owner"
+  to = "/oracles/migration/hotspot-operator"
   status = 301
   force = true
 [[redirects]]
-  from = "/solana//migration/maker"
-  to = "/oracles//migration/hotspot-maker"
+  from = "/solana/migration/maker"
+  to = "/oracles/migration/hotspot-maker"
   status = 301
   force = true
 [build.environment]
