--- a/netlify.toml
+++ b/netlify.toml
@@ -29,6 +29,26 @@
   status = 301
   force = true
 [[redirects]]
+  from = "/mine-hnt/maker-apps"
+  to = "/hotspot-makers/maker-apps"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/use-the-network/policies"
+  to = "/faq/terms"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/use-the-network/policies/terms"
+  to = "/faq/terms"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/use-the-network/policies/privacy"
+  to = "/faq/privacy"
+  status = 301
+  force = true
+[[redirects]]
   from = "/solana/oracle-data"
   to = "/oracles/oracle-data"
   status = 301
