--- a/netlify.toml
+++ b/netlify.toml
@@ -53,6 +53,16 @@
   to = "/oracles/oracle-data"
   status = 301
   force = true
+[[redirects]]
+  from = "/solana/migration/hotspot-owner"
+  to = "/oracles/migration/hotspot-operator"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/solana/migration/maker"
+  to = "/oracles/migration/hotspot-maker"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
