redirect for /blockchain/helium-token

--- a/netlify.toml
+++ b/netlify.toml
@@ -58,6 +58,11 @@
   to = "/solana/migration/hotspot-operator"
   status = 301
   force = true
+[[redirects]]
+  from = "/blockchain/helium-token"
+  to = "/helium-tokens/hnt"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
