Revise wallet migration guides into migration guides section

--- a/netlify.toml
+++ b/netlify.toml
@@ -63,6 +63,11 @@
   to = "/helium-tokens/hnt"
   status = 301
   force = true
+[[redirects]]
+  from = "/solana/migration/ledger"
+  to = "/solana/migration/wallet-user#for-ledger-wallet-users"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
