Upating netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -65,7 +65,7 @@
   force = true
 [[redirects]]
   from = "/solana/migration/ledger"
-  to = "/solana/migration/wallet-user#for-ledger-wallet-users"
+  to = "/solana/migration/wallet-user"
   status = 301
   force = true
 [build.environment]
