--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "@docusaurus/core": "2.3.1",
     "@docusaurus/preset-classic": "2.3.1",
     "@docusaurus/theme-mermaid": "2.3.1",
+    "@helium/address": "^4.8.1",
+    "@helium/spl-utils": "^0.0.43",
     "@mdx-js/react": "^1.5.8",
+    "@metaplex-foundation/mpl-token-metadata": "^2.9.1",
+    "@solana/web3.js": "^1.66.1",
+    "axios": "^1.3.4",
     "clsx": "^1.1.1",
     "hast-util-is-element": "1.1.0",
     "react": "^16.8.4",
+    "react-async-hook": "^4.0.0",
     "react-dom": "^16.8.4",
     "rehype-katex": "5",
     "remark-math": "3",
