--- a/netlify.toml
+++ b/netlify.toml
@@ -71,3 +71,5 @@
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
+  MIGRATION_SERVICE_URL="https://migration.web.helium.io"
+  SOLANA_URL="https://api.devnet.solana.com"
