--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@helium/spl-utils": "^0.0.43",
     "@mdx-js/react": "^1.5.8",
     "@metaplex-foundation/mpl-token-metadata": "^2.9.1",
+    "@solana/wallet-adapter-ledger": "^0.9.24",
     "@solana/web3.js": "^1.66.1",
     "axios": "^1.3.4",
     "clsx": "^1.1.1",
@@ -25,6 +26,7 @@
     "react": "^16.8.4",
     "react-async-hook": "^4.0.0",
     "react-dom": "^16.8.4",
+    "react-icons": "^4.8.0",
     "rehype-katex": "5",
     "remark-math": "3",
     "yarn": "^1.22.10"
