--- a/netlify.toml
+++ b/netlify.toml
@@ -68,6 +68,11 @@
   to = "/solana/migration/wallet-user"
   status = 301
   force = true
+[[redirects]]
+  from = "/use-the-network/open-lns"
+  to = "/lorawan-on-helium/open-lns"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
