Add colleciton key

--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@docusaurus/preset-classic": "2.4.0",
     "@docusaurus/theme-mermaid": "2.4.0",
     "@helium/address": "^4.8.1",
-    "@helium/helium-react-hooks": "^0.0.47",
-    "@helium/hydra-sdk": "0.0.48-hydra.1",
-    "@helium/spl-utils": "^0.0.43",
+    "@helium/helium-react-hooks": "^0.0.48",
+    "@helium/idls": "0.0.48",
+    "@helium/fanout-sdk": "0.0.48",
+    "@helium/spl-utils": "^0.0.48",
     "@mdx-js/react": "^1.5.8",
     "@metaplex-foundation/mpl-token-metadata": "^2.9.1",
     "@solana/spl-token": "^0.3.7",
