Change HST to our fanout impl

--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@docusaurus/preset-classic": "2.4.0",
     "@docusaurus/theme-mermaid": "2.4.0",
     "@helium/address": "^4.8.1",
+    "@helium/fanout-sdk": "0.0.49-fanout.0",
     "@helium/helium-react-hooks": "^0.0.48",
     "@helium/idls": "0.0.48",
-    "@helium/fanout-sdk": "0.0.48",
     "@helium/spl-utils": "^0.0.48",
     "@mdx-js/react": "^1.5.8",
-    "@metaplex-foundation/mpl-token-metadata": "^2.9.1",
     "@solana/spl-token": "^0.3.7",
+    "@metaplex-foundation/mpl-token-metadata": "^2.8.4",
     "@solana/wallet-adapter-ledger": "^0.9.24",
     "@solana/wallet-adapter-react": "^0.15.32",
     "@solana/wallet-adapter-react-ui": "^0.9.31",
