--- a/netlify.toml
+++ b/netlify.toml
@@ -68,6 +68,11 @@
   to = "/lorawan-on-helium/open-lns"
   status = 301
   force = true
+[[redirects]]
+  from = "/hotspot-makers/original-helium-hotspot"
+  to = "/mine-hnt/helium-hotspot-app"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
