--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@docusaurus/preset-classic": "2.4.0",
     "@docusaurus/theme-mermaid": "2.4.0",
     "@helium/address": "^4.8.1",
-    "@helium/fanout-sdk": "0.0.49-fanout.0",
-    "@helium/helium-react-hooks": "^0.0.48",
-    "@helium/idls": "0.0.48",
-    "@helium/spl-utils": "^0.0.48",
+    "@helium/fanout-sdk": "^0.1.1",
+    "@helium/helium-react-hooks": "^0.1.1",
+    "@helium/idls": "^0.1.1",
+    "@helium/spl-utils": "^0.1.1",
     "@mdx-js/react": "^1.5.8",
     "@solana/spl-token": "^0.3.7",
     "@metaplex-foundation/mpl-token-metadata": "^2.8.4",
