--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@helium/idls": "^0.1.1",
     "@helium/spl-utils": "^0.1.1",
     "@mdx-js/react": "^1.5.8",
-    "@solana/spl-token": "^0.3.7",
     "@metaplex-foundation/mpl-token-metadata": "^2.8.4",
+    "@solana/spl-account-compression": "^0.1.7",
+    "@solana/spl-token": "^0.3.7",
     "@solana/wallet-adapter-ledger": "^0.9.24",
     "@solana/wallet-adapter-react": "^0.15.32",
     "@solana/wallet-adapter-react-ui": "^0.9.31",
