--- a/netlify.toml
+++ b/netlify.toml
@@ -73,6 +73,16 @@
   to = "/mine-hnt/helium-hotspot-app"
   status = 301
   force = true
+[[redirects]]
+  from = "/wallets/twelve-words"
+  to = "/wallets/wallet-seed-phrase"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/wallets/twenty-four-words"
+  to = "/wallets/wallet-seed-phrase"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
