Clean up Price Oracle docs

--- a/netlify.toml
+++ b/netlify.toml
@@ -84,8 +84,8 @@
   status = 301
   force = true
 [[redirects]]
-  from = "/mine-hnt/validators/validators-and-voting-power"
-  to = "/vote-escrow/voting-power"
+  from = "/blockchain/oracles"
+  to = "/oracles/price-oracles"
   status = 301
   force = true
 [build.environment]
