Clean up Price Oracle docs

--- a/netlify.toml
+++ b/netlify.toml
@@ -83,6 +83,11 @@
   to = "/wallets/wallet-seed-phrase"
   status = 301
   force = true
+[[redirects]]
+  from = "/blockchain/oracles"
+  to = "/oracles/price-oracles"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
