--- a/netlify.toml
+++ b/netlify.toml
@@ -88,6 +88,11 @@
   to = "/oracles/price-oracles"
   status = 301
   force = true
+[[redirects]]
+  from = "/mine-hnt/validators/validators-and-voting-power"
+  to = "/vote-escrow/voting-power"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
