redirect for all docs goes to migration guide

--- a/netlify.toml
+++ b/netlify.toml
@@ -93,6 +93,11 @@
   to = "/vote-escrow/voting-power"
   status = 301
   force = true
+[[redirects]]
+  from = "/validators/*"
+  to = "/solana/migration/validator-operator"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
