--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "editor.rulers": [100],
-  "editor.wordWrap": "off"
+  "editor.wordWrap": "off",
+  "workbench.colorCustomizations": {
+    "titleBar.activeBackground": "#a334fb",
+    "titleBar.activeForeground": "#fff"
+  }
 }
