added author and update frontmatter, linewraps

--- a/devblog/authors.yaml
+++ b/devblog/authors.yaml
@@ -82,3 +82,8 @@ jadeallenx:
   name: Jade Allen
   url: https://github.com/jadeallenx
   image_url: https://github.com/jadeallenx.png
+
+lytzV:
+  name: Victor Li
+  url: https://github.com/lytzV
+  image_url: https://github.com/lytzV.png
