--- a/netlify.toml
+++ b/netlify.toml
@@ -29,8 +29,8 @@
   status = 301
   force = true
 [[redirects]]
-  from = "/mine-hnt/maker-apps"
-  to = "/hotspot-makers/maker-apps"
+  from = "/hotspot-makers/maker-apps"
+  to = "/hotspot-makers/hotspot-makers"
   status = 301
   force = true
 [[redirects]]
