--- a/netlify.toml
+++ b/netlify.toml
@@ -98,6 +98,16 @@
   to = "/solana/migration/validator-operator"
   status = 301
   force = true
+[[redirects]]
+  from = "/iot"
+  to = "/lorawan-on-helium"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/mobile"
+  to = "/5g-on-helium"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
