redirect for maker apps

--- a/netlify.toml
+++ b/netlify.toml
@@ -108,6 +108,11 @@
   to = "/5g-on-helium"
   status = 301
   force = true
+[[redirects]]
+  from = "/hotspot-makers/maker-apps"
+  to = "/hotspot-makers"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
