[DNM] - 404 catchall redirect test

--- a/netlify.toml
+++ b/netlify.toml
@@ -113,6 +113,10 @@
   to = "/hotspot-makers"
   status = 301
   force = true
+[[redirects]]
+  from = "/*"
+  to = "/"
+  status = 404
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
