Remove legacy Data Credit page.

--- a/netlify.toml
+++ b/netlify.toml
@@ -376,6 +376,9 @@
 [[redirects]]
   from = "/wallets/app-wallet/rak-hotspot-setup"
   to = "/"
+[[redirects]]
+  from = "/use-the-network/console/data-credits"
+  to = "/helium-tokens/data-credit"
   status = 301
   force = true
 [[redirects]]
