Remove legacy Data Credit page.

--- a/netlify.toml
+++ b/netlify.toml
@@ -113,6 +113,11 @@
   to = "/hotspot-makers"
   status = 301
   force = true
+[[redirects]]
+  from = "/use-the-network/console/data-credits"
+  to = "/helium-tokens/data-credit"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
