Add suggested extensions (+ configurations)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,13 @@
 {
   "editor.rulers": [100],
-  "editor.wordWrap": "off",
   "workbench.colorCustomizations": {
     "titleBar.activeBackground": "#a334fb",
     "titleBar.activeForeground": "#fff"
-  }
+  },
+  "prettier.proseWrap": "always",
+  "[mdx]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "grammarly.files.include": ["**/*.mdx", "**/*.md"]
 }
