Define style via plugin config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,10 @@
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "grammarly.files.include": ["**/*.mdx", "**/*.md"]
+  "grammarly.files.include": [
+    "**/*.mdx",
+    "**/*.md"
+  ],
+  "grammarly.config.suggestions.InformalPronounsAcademic": true,
+  "grammarly.config.suggestions.PassiveVoice": true
 }
