added maker app redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -386,6 +386,16 @@
   to = "/helium-tokens/data-credit"
   status = 301
   force = true
+[[redirects]]
+  from = "/mine-hnt/maker-apps"
+  to = "/hotspot-makers"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/hotspot-makers/maker-apps"
+  to = "/hotspot-makers"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
