--- a/netlify.toml
+++ b/netlify.toml
@@ -406,6 +406,33 @@
   to = "/governance/voting"
   status = 301
   force = true
+[[redirects]]
+  from = "/helium-tokens/data-credit"
+  to = "/data-credit"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/helium-tokens/hnt"
+  to = "/hnt-token"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/helium-tokens/iot"
+  to = "/iot-token"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/helium-tokens/mobile"
+  to = "/mobile-token"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
+
+
+
+
+
+
+
