reference style links, shortened url slugs, redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -60,7 +60,7 @@
   force = true
 [[redirects]]
   from = "/blockchain/helium-token"
-  to = "/helium-tokens/hnt"
+  to = "/hnt-token"
   status = 301
   force = true
 [[redirects]]
@@ -378,12 +378,7 @@
   to = "/"
 [[redirects]]
   from = "/use-the-network/console/data-credits"
-  to = "/helium-tokens/data-credit"
-  status = 301
-  force = true
-[[redirects]]
-  from = "/use-the-network/console/data-credits"
-  to = "/helium-tokens/data-credit"
+  to = "/data-credit"
   status = 301
   force = true
 [[redirects]]
@@ -406,6 +401,38 @@
   to = "/governance/voting"
   status = 301
   force = true
+[[redirects]]
+  from = "/helium-tokens/data-credit"
+  to = "/data-credit"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/helium-tokens/hnt"
+  to = "/hnt-token"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/helium-tokens/iot"
+  to = "/iot-token"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/helium-tokens/mobile"
+  to = "/mobile-token"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/helium-tokens/sol-token"
+  to = "/sol-token"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
+
+
+
+
+
+
+
