--- a/netlify.toml
+++ b/netlify.toml
@@ -426,6 +426,11 @@
   to = "/sol-token"
   status = 301
   force = true
+[[redirects]]
+  from = "/mine-hnt"
+  to = "/mine-iot"
+  status = 301
+  force = true
 [build.environment]
   YARN_VERSION = "1.22.19"
   NODE_VERSION = "16.15.1"
