--- a/netlify.toml
+++ b/netlify.toml
@@ -90,7 +90,7 @@
   force = true
 [[redirects]]
   from = "/mine-hnt/validators/validators-and-voting-power"
-  to = "/vote-escrow/voting-power"
+  to = "/governance/faq"
   status = 301
   force = true
 [[redirects]]
@@ -429,6 +429,11 @@
 [[redirects]]
   from = "/mine-hnt"
   to = "/mine-iot"
+  status = 301
+  force = true
+[[redirects]]
+  from = "/vote-escrow/voting-power"
+  to = "/governance/faq"
   status = 301
   force = true
 [build.environment]
