sidebar and redirect updates

--- a/netlify.toml
+++ b/netlify.toml
@@ -59,6 +59,11 @@
   status = 301
   force = true
 [[redirects]]
+  from = "/use-the-network/devices/ready-to-use/comtac/lpn-km"
+  to = "/use-the-network/devices/ready-to-use/comtac/cluey-km"
+  status = 301
+  force = true
+[[redirects]]
   from = "/blockchain/helium-token"
   to = "/hnt-token"
   status = 301
